# timetracker

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  __main__.py  config.py  logging_config.py  main.py
src/app/core/: __init__.py  app_bus.py  history_aggregator.py  state.py  test_timer_engine.py  timer_engine.py
src/app/storage/: __init__.py  bootstrap.py  models.py  paths.py  sessions_repo.py  settings_repo.py  utils.py
src/app/ui/: __init__.py  main_window.py  tray.py
src/app/ui/tabs/: __init__.py  history_tab.py  settings_tab.py  timer_tab.py
tests/: test_history_aggregator.py  test_smoke.py
